[refactor][fix] card overlay and update z-index for header

--- a/components/card/card.css
+++ b/components/card/card.css
@@ -61,7 +61,7 @@
 }
 
 .card-title.brief-overlay {
-  top: 40%;
+  bottom: 0;
   color: var(--color-white);
   height: fit-content;
   width: 100%;
